Feature section design completed

--- a/index.html
+++ b/index.html
@@ -61,18 +61,75 @@
                 </ul>
               </div>
             </nav>
-            <div class="row">
               <div class="col head-trending">
                 <p class="trending">TRENDING</p>
               </div>
           </div>
         </header>
-        <div class="container-fluid">
-         
-        </div>
+  <div class="container-fluid content">
+  <div class="row">
+    <div class="col-lg-4 col-md-4">
+        <div class="d-flex flex-column">
+            <div class="featured">
+            <div class="block-title">FEATURED STORIES</div>
+            <article>
+            <div class="wrap">
+            <a><img src="images/newsweek-momentum-awards-logo.png" class="img-fluid" alt="Responsive image"><span class="pic-on">ANALYSIS</span></a>
+            </div>
+            <div class="article-info">
+            <h3>The Newsweek Momentum Awards</h3>
+            <div class="summary">The Newsweek Momentum Awards will recognize five individuals around the globe, as well as one city, which will be chosen as the "smartest city in the world.</div>
+            </div>
+           </article>
+           <article>
+              <div class="wrap">
+              <a><img src="images/democratic-presidential-candidates-debate-detroit-over-two-nights.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">POLITICS</span></a>
+              </div>
+              <div class="article-info">
+              <h3>Warren Was Praised After Debates, but Biden Dominates Post-Debate Polling</h3>
+              <div class="summary">Senators Kamala Harris and Cory Booker, who took turns railing against Joe Biden, did not appear to have reaped significant gains from their performances.</div>
+              </div>
+             </article>
+             <article>
+                <div class="wrap">
+                <a><img src="images/russia-inf-treaty-russia-nuclear.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">NEWS</span></a>
+                </div>
+                <div class="article-info">
+                <h3>U.S. Ditching INF Nuclear Treaty Could Spark Global Chaos: Gorbachev</h3>
+                <div class="summary">Gorbachev was the Soviet leader when the agreement—limiting nuclear capable missiles in Europe—was signed in 1987.</div>
+                </div>
+              </article>
+    </div>
+    </div>
+    </div>
+    <!--TOP STORY SECTION-->
+<div class="col-lg-4 col-md-4">
+
+
+</div>
+
+
+
+    <!--END OF TOP STORY SECTION-->
+<div class="col-lg-4 col-md-4">
 
   
-   
+</div>
+
+
+    <!--OPINION SECTION-->
+
+
+
+
+    <!--END OF OPINION SECTION-->
+
+    <!--End of row-->
+    </div>
+
+
+    </div>
+  <!--End of container-fluid-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
