TOP section and OPINION section updated

--- a/index.html
+++ b/index.html
@@ -104,16 +104,85 @@
     </div>
     <!--TOP STORY SECTION-->
 <div class="col-lg-4 col-md-4">
-
-
+  <div class="d-flex flex-column">
+      <div class="featured">
+          <div class="block-title">TOP STORY</div>
+          <article>
+              <div class="wrap">
+                  <a><img src="images/mexico-us-border.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">NEWS</span></a>
+              </div>
+              <h3>Mexican Police Kill Migrant in Front of His Daughter</h3>
+              <div class="summary">The Central American father was shot in the northern Mexico city of Saltillo. International human rights organizations have demanded a detailed investigation.</div>
+              
+          </article>
+  </div>
+</div>
 </div>
 
 
 
     <!--END OF TOP STORY SECTION-->
 <div class="col-lg-4 col-md-4">
+<div class="d-flex flex-column">
+<div class="featured">
+   <div class="block-title">OPINION</div>
+<div class="wrap opinion">
+<div class="row">
+    <div class=" col-3"><img src="images/marilyn-mosby.png" class="headshot" alt="Responsive image"></div>
+    <div class="col-9">
+        <p class="info">What We Need in Baltimore From Trump Is Less Tweeting and More Action</p>
+        <p class="byline">BY MARILYN MOSBY</p>
+    </div>
+</div>
+</div>
+<div class="wrap opinion">
+    <div class="row">
+        <div class=" col-3"><img src="images/mansoor-shams.png" class="headshot" alt="Responsive image"></div>
+        <div class="col-9">
+            <p class="info">I'm a U.S. Marine, and This Isn't the Freedom of Speech I Served to Protect</p>
+            <p class="byline">BY MANSOOR SHAMSY</p>
+        </div>
+    </div>
+    </div>
+    <div class="wrap opinion">
+        <div class="row">
+            <div class=" col-3"><img src="images/sallykim.png" class="headshot" alt="Responsive image"></div>
+            <div class="col-9">
+                <p class="info">We Visited the Border. The Children We Saw There Need Pediatricians, Now</p>
+                <p class="byline">BY SALLY GOZA AND KIM SCHRIER</p>
+            </div>
+        </div>
+        </div>
+       
+        <div class="wrap opinion">
+            <div class="row">
+                <div class=" col-3"><img src="images/tim-dorsey.png" class="headshot" alt="Responsive image"></div>
+                <div class="col-9">
+                    <p class="info">Laughing at Florida Man Is Not Only OK—for Floridians, It's Essential</p>
+                    <p class="byline">BY TIM DORSEY</p>
+                </div>
+            </div>
+            </div>
+            <div class="wrap opinion">
+                <div class="row">
+                    <div class=" col-3"><img src="images/stephen-prince.png" class="headshot" alt="Responsive image"></div>
+                    <div class="col-9">
+                        <p class="info">It's Time Republicans Tried Helping Average Americans. That Starts With Taxing People Like Me</p>
+                        <p class="byline">BY STEPHEN PRINCE</p>
+                    </div>
+                </div>
+                </div>
 
-  
+                <div class="wrap opinion">
+                    <div class="row">
+                        <div class=" col-3"><img src="images/cui-tiankai.png" class="headshot" alt="Responsive image"></div>
+                        <div class="col-9">
+                            <p class="info">One Country, Two Systems Is the Best System for Hong Kong, China—and America</p>
+                            <p class="byline">BY CUI TIANKAI</p>
+                        </div>
+                    </div>
+                    </div>
+</div>
 </div>
 
 
