Top stry updated

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
     </div>
     <!--TOP STORY SECTION-->
 <div class="col-lg-4 col-md-4">
-  <div class="d-flex flex-column">
-      <div class="featured">
+        <div class="featured">
           <div class="block-title">TOP STORY</div>
           <article>
               <div class="wrap">
@@ -115,6 +114,13 @@
               <div class="summary">The Central American father was shot in the northern Mexico city of Saltillo. International human rights organizations have demanded a detailed investigation.</div>
               
           </article>
+          <div class="featured sticky-top">
+              <div class="block-title">MORE STORIES</div>
+              <div class="clearfix" id="more-stories-part">
+                  <div id="image"><img src="images/amy-mcgrath-mitch-mcconnell-2020-ad-war.jpg" class="img-fluid"></div>
+                  <h6>AMY MCGRATH ACCUSES MITCH MCCONNELL OF USING 'DOCTORED AUDIO' TO MISLEAD KENTUCKIANS IN HEATED 2020 SENATE RACE</h6>
+                  <div class="summary">"He cut out half the sentence. You should release the whole recording, senator," said the Kentucky Democrat seeking to unseat the senator.</div>
+              </div>
   </div>
 </div>
 </div>
@@ -122,6 +128,8 @@
 
 
     <!--END OF TOP STORY SECTION-->
+
+  <!--OPINION SECTION BEGINS-->
 <div class="col-lg-4 col-md-4">
 <div class="d-flex flex-column">
 <div class="featured">
@@ -186,7 +194,7 @@
 </div>
 
 
-    <!--OPINION SECTION-->
+  
 
 
 
@@ -196,9 +204,9 @@
     <!--End of row-->
     </div>
 
-
+<!--End of container-fluid-->
     </div>
-  <!--End of container-fluid-->
+  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
