main tag added to the main section of the body

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li><a id="search">Search</a><i class="fas fa-search"></i></li>
         </ul>
     </nav>
+<main>
 
     <div class="content">
         <div class="featured">
@@ -951,7 +952,8 @@
                     </div>
                 </div>
         </section>
-
+    
+    </main>
         <footer>
             <div class="footer-top">
                 <div class="row">
