All error fixed

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <div class="fixed-top" id="stickynav">
-        <div class="d-flex justify-content-between" id="navscroll">
+        <div class="d-flex justify-content-between navscroll">
             <div class="p-2">
                 <div id="nav-date">Wed, Aug 07, 2019</div>
             </div>
-            <div class="p-2" id="signin">
+            <div class="p-2 signin">
                 <span>SIGN IN</span><a href="#" id="signinA">SUBSCRIBE <i class="fas fa-chevron-right" id="shevron"></i></a>
                 <i class="fas fa-bars" id="barsId"></i>
             </div>
@@ -121,10 +121,9 @@
                                 <div class="summary">The International Baccalaureate (IB) accredited schools inspire young people to become lifelong learners and academic high achievers - find out more.</div>
                             </div>
                         </article>
-
                     </div>
                 </div>
-
+            
                 <div class="col-md-8 col-lg-5 order-1 order-md-2">
                     <div class="featured">
                         <div class="block-title">TOP STORY</div>
@@ -341,6 +340,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
 
         <section class="bottom">
@@ -1010,9 +1010,6 @@
             </div>
 
         </footer>
-
-    </div>
-
 
     <script src="script.js"></script>
 
