--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <div class="fixed-top" id="stickynav">
-        <div class="d-flex justify-content-between navscroll">
+        <div class="d-flex justify-content-between" id = "navscroll">
             <div class="p-2">
                 <div id="nav-date">Wed, Aug 07, 2019</div>
             </div>
-            <div class="p-2 signin">
+            <div class="p-2" id= "signin">
                 <span>SIGN IN</span><a href="#" id="signinA">SUBSCRIBE <i class="fas fa-chevron-right" id="shevron"></i></a>
                 <i class="fas fa-bars" id="barsId"></i>
             </div>
